--- a/Sprint 1/public/assets/css/estiloCalculadora.css
+++ b/Sprint 1/public/assets/css/estiloCalculadora.css
@@ -1,66 +1,97 @@
+body {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
+
+}
+
+section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
 .container {
     display: flex;
-    background-image: url("img/fondo.jpg");
+    border-radius: 10px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+    margin-left: 20px;
 }
 
 #imagen {
-    width: 360px;
+    width: 340px;
     height: auto;
-    margin-right: 20px;
+    border-radius: 10px 0 0 10px;
 }
 
 .formulario {
-    width: 300px;
-    height: 400px;
     flex: 1;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    padding: 20px;
+    border-radius: 0 10px 10px 0;
     background-color: #ffffff;
-    box-shadow: 10 0 100px rgba(0, 0, 0, 0.1); 
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 15px;
 }
 
 h1 {
-    font-family: 'Poppins', sans-serif;
-    font-size: 24px;
+    font-size: 25px;
     margin-bottom: 20px;
+    color: #46A2FD; 
 }
 
 label {
     display: block;
     margin-bottom: 5px;
+    margin-top: 5px;
+    color: #333333; 
 }
 
 input[type="number"] {
+    box-sizing: border-box;
     width: 100%;
-    padding: 8px;
+    padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
     margin-bottom: 10px;
 }
 
 input[type="submit"] {
-    width: 100%;
-    padding: 20px;
-    background-color: #007bff;
+    width: 50%;
+    padding: 15px;
+    font-size: 15px;
+    font-weight: bold;
+    background-color: #46A2FD;
     color: #fff;
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    transition: 1s all;   
 }
 
 input[type="submit"]:hover {
-    background-color: #0056b3;
+    background-color: #3e8adb;
+    transform: scale(1.05);
 }
 
 .result {
     margin-top: 20px;
     font-size: 18px;
     font-weight: bold;
+    color: #333333; 
 }
-body {
-    background-color: #bbd2eb; 
-    color: black; 
-    font-family: 'Poppins', sans-serif;
-    font-size: larger;
+
+.explanation {
+    flex: 1;
+    padding: 20px;
+}
+
+.text-image {
+    margin-top: 20px;
+}
+
+.text-image h1 {
+    font-size: 24px;
+    margin-bottom: 20px;
+    color: #46A2FD;
 }
