--- a/Sprint 1/public/assets/css/estiloCalculadora.css
+++ b/Sprint 1/public/assets/css/estiloCalculadora.css
@@ -1,6 +1,6 @@
 .container {
     display: flex;
-    background-image: url("img/fondo.jpg");
+    background-image: url("../../img/fondo.jpg");
 }
 
 #imagen {
